--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Calendar & Price Widget</title>
-</head>
-<body>
-<div id="app"></div>
-<script type='text/javascript' src="bundle.js"></script>
-</body>
+  <head>
+    <title>Calendar & Price Widget</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="text/javascript" src="calendarwidget.js"></script>
+  </body>
 </html>
