--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Calendar & Price Widget</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="calendarWidget"></div>
     <script type="text/javascript" src="calendarwidget.js"></script>
   </body>
 </html>
