--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
   </head>
   <body>
     <div id="calendarWidget"></div>
-    <script type="text/javascript" src="calendarwidget.js"></script>
+    <script
+      type="text/javascript"
+      src="http://localhost:2002/calendarwidget.js"
+    ></script>
   </body>
 </html>
