--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Calendar & Price Widget</title>
+    <script type="text/javascript">
+      console.log("in the html header");
+    </script>
   </head>
   <body>
     <div id="calendarWidget"></div>
