--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <title>Calendar & Price Widget</title>
-    <script type="text/javascript">
-      console.log("in the html header");
-    </script>
+    <script type="text/javascript"></script>
   </head>
   <body>
     <div id="calendarWidget"></div>
