--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <div id="calendarWidget"></div>
     <script
       type="text/javascript"
-      src="http://localhost:2002/calendarwidget.js"
+      src="http://13.58.29.30:2002/calendarwidget.js"
     ></script>
   </body>
 </html>
